# redentnova-complaints-pipeline

./: .env.example  .gitignore  Makefile  README.md  complaints_sheet_db.py  pyproject.toml  requirements.txt  todos.md
.github/workflows/: complaints-pipeline.yml
apps_script/: Code.gs
docs/: workflow_activity.puml  workflow_sequence.puml
scripts/: encode_google_sa_json_b64.sh  run_local.bat  run_local.sh
src/complaints_pipeline/: backup.py  cli.py  dispatch_payload.py  form_mapping.py  graph.py  msforms_poll.py  notify.py  pdf_report.py  schema.py  sheets.py  util.py
tests/: test_backup.py  test_cli_fast_paths.py  test_form_mapping.py  test_graph.py  test_pdf.py  test_schema.py
